syntax = "proto3";

option java_package = "cn.edu.ruc.iir.paraflow.commons.proto";
option java_outer_classname = "StatusProto";
option objc_class_prefix = "STATUS";

package paraflow;

message ResponseStatus {
    enum State {
        STATUS_OK = 0;

        ACTION_PARAM_INVALID_ERROR = -1;
        BLOCK_INDEX_CREATION_ERROR = -2;
        BLOCK_INDEX_DELETE_ERROR = -3;
        COLUMN_CREATION_ERROR = -4;
        COLUMN_DELETE_ERROR = -5;
        COLUMN_NOT_FOUND_ERROR = -6;
        COLUMN_RENAME_ERROR = -7;
        CONFIG_FILE_NOT_FOUND_FATAL = -8;
        DATABASE_CREATION_ERROR = -9;
        DATABASE_DELETE_ERROR = -10;
        DATABASE_NOT_FOUND_WARN = -11;
        DATABASES_NOT_EXIST_WARN = -12;
        DATABASE_COLUMN_DELETE_ERROR = -13;
        DBPARAM_CREATION_ERROR = -14;
        DBPARAM_DELETE_ERROR = -15;
        DB_TABLE_DELETE_ERROR = -16;
        FIBER_FUNCTION_CREATION_ERROR = -17;
        FIBER_FUNCTION_NOT_FOUND_WARN = -18;
        FILTER_BLOCK_INDEX_NOT_FOUND_WARN = -19;
        META_INIT_FATAL = -20;
        META_TABLE_CORRUPTED_FATAL = -21;
        META_TABLE_CREATION_FATAL = -22;
        METHOD_NOT_IMPLEMENTED_INFO = -23;
        RPC_SERVER_IO_FATAL = -24;
        SQL_EXECUTION_ERROR = -25;
        STORAGE_FORMAT_CREATION_ERROR = -26;
        STORAGE_FORMAT_NOT_FOUND_ERROR = -27;
        TABLE_CREATION_ERROR = -28;
        TABLE_DELETE_ERROR = -29;
        TABLE_NOT_FOUND_WARN = -30;
        TABLE_RENAME_ERROR = -31;
        TABLES_NOT_EXIST_WARN = -32;
        TBLPARAM_CREATION_ERROR = -33;
        TBLPARAM_DELETE_ERROR = -34;
        TBLPRIV_CREATION_ERROR = -35;
        TBLPRIV_DELETE_ERROR = -36;
        USER_CREATION_ERROR = -37;
        USER_NOT_FOUND_ERROR = -38;
        TBL_FUNC_CREATION_ERROR = -39;
        BLOCK_PATH_UPDATE_ERROR = -40;

        MSG_SERIALIZE_ERROR = -100;
        MSG_DESERIALIZE_ERROR = -101;

        DATABASE_ALREADY_EXISTS = 1;
        DATABASE_NOT_FOUND = 2;
        TABLE_ALREADY_EXISTS = 3;
        TABLE_NOT_FOUND = 4;
        COLUMN_ALREADY_EXISTS = 5;
        COLUMN_NOT_FOUND = 6;
        FIBER_ALREADY_EXISTS = 7;
        CREAT_COLUMN_ERROR = 9;
        META_TABLE_CREATE_FAIL = 10;
        META_TABLE_ALREADY_EXISTS = 11;
        META_TABLE_BROKEN = 12;
        USER_NOT_FOUND = 13;
        CREATE_TABLE_ERROR = 14;
        DELETE_COLUMN_ERROR = 15;
        DELETE_TABLE_ERROR = 16;
        DELETE_DATABASE_ERROR = 17;
        USER_ALREADY_EXISTS = 18;
        DATABASE_PARAM_ALREADY_EXISTS = 19;
        TABLE_PARAM_ALREADY_EXISTS = 20;
        TABLE_PRIV_ALREADY_EXISTS = 21;
        STORAGE_FORMAT_ALREADY_EXISTS = 22;
        STORAGE_FORMAT_NOT_FOUND = 23;
        FIBER_FUNCTION_ALREADY_EXISTS = 24;
        BLOCK_INDEX_ALREADY_EXISTS = 25;

    }
    State status = 1;
}
